--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
-together==1.5.5
+together>=1.4.6
+web3>=6.15.1
+python-dotenv>=1.0.1
+eth-account>=0.11.0
+eth-typing>=4.0.0
+eth-utils>=4.0.0
+requests>=2.31.0
+python-json-logger>=2.0.7~
